@@ -6,7 +6,7 @@
 	# See the README and LICENSE files for details
 
 	# --------------------------------------------------------
-	# $Id: bug_delete.php,v 1.37 2004-01-11 07:16:06 vboctor Exp $
+	# $Id: bug_delete.php,v 1.38 2004-08-04 15:02:21 vboctor Exp $
 	# --------------------------------------------------------
 ?>
 <?php
@@ -25,8 +25,14 @@
 	access_ensure_bug_level( config_get( 'delete_bug_threshold' ), $f_bug_id );
 
 	helper_ensure_confirmed( lang_get( 'delete_bug_sure_msg' ), lang_get( 'delete_bug_button' ) );
+	
+	$t_bug = bug_get( $f_bug_id, true );
+	
+	helper_call_custom_function( 'issue_delete_validate', array( $f_bug_id ) );
 
 	bug_delete( $f_bug_id );
+
+	helper_call_custom_function( 'issue_delete_notify', array( $f_bug_id ) );
 
 	print_successful_redirect( 'view_all_bug_page.php' );
 ?>
